--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,23 +7,27 @@ edition = "2021"
 
 [[bin]]
 name = "day01"
-path = "src/day01/bin/day01.rs"
+path = "src/day01/day01.rs"
 
 [[bin]]
 name = "day02"
-path = "src/day02/bin/day02.rs"
+path = "src/day02/day02.rs"
 
 [[bin]]
 name = "day03"
-path = "src/day03/bin/day03.rs"
+path = "src/day03/day03.rs"
 
 [[bin]]
 name = "day04"
-path = "src/day04/bin/day04.rs"
+path = "src/day04/day04.rs"
 
 [[bin]]
 name = "day05"
-path = "src/day05/bin/day05.rs"
+path = "src/day05/day05.rs"
+
+[[bin]]
+name = "day06"
+path = "src/day06/day06.rs"
 
 [dependencies]
 regex = "1.7.0"
