--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,13 @@ path = "src/day05/day05.rs"
 name = "day06"
 path = "src/day06/day06.rs"
 
+[[bin]]
+name = "day07"
+path = "src/day07/day07.rs"
+
+[[bin]]
+name = "day07sample"
+path = "src/day07/sample.rs"
+
 [dependencies]
 regex = "1.7.0"
